{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 67,
  "lineage": "6b85e81b-be88-e8b6-a19a-a1240b7eb138",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0938a60d87953e820",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0779aa64829fe669f",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "devops-sandbox-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07f8d4239a7ae8636"
              }
            ],
            "primary_network_interface_id": "eni-07f8d4239a7ae8636",
            "private_dns": "ip-10-0-1-212.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.212",
            "public_dns": "ec2-3-96-128-247.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.96.128.247",
            "region": "ca-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3ca3decb907a588",
            "tags": {
              "Name": "devops-sandbox-server"
            },
            "tags_all": {
              "Name": "devops-sandbox-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bafb31bd10fa6ee6"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.devops_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:688948287774:internet-gateway/igw-0f112267dd34e6ccd",
            "id": "igw-0f112267dd34e6ccd",
            "owner_id": "688948287774",
            "region": "ca-central-1",
            "tags": {
              "Name": "devops-sandbox-igw"
            },
            "tags_all": {
              "Name": "devops-sandbox-igw"
            },
            "vpc_id": "vpc-05257fce419460026"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:688948287774:route-table/rtb-0cf80b477dda912f9",
            "id": "rtb-0cf80b477dda912f9",
            "owner_id": "688948287774",
            "propagating_vgws": [],
            "region": "ca-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f112267dd34e6ccd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-sandbox-public-rt"
            },
            "tags_all": {
              "Name": "devops-sandbox-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05257fce419460026"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "688948287774",
            "id": "rtb-0cf80b477dda912f9",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcc2f39c15dbb527",
            "region": "ca-central-1",
            "route_table_id": "rtb-0cf80b477dda912f9",
            "subnet_id": "subnet-0c3ca3decb907a588"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:688948287774:security-group/sg-0bafb31bd10fa6ee6",
            "description": "Allow SSH, HTTP, K8s API, and App ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bafb31bd10fa6ee6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devops-sandbox-sg",
            "name_prefix": "",
            "owner_id": "688948287774",
            "region": "ca-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-sandbox-sg"
            },
            "tags_all": {
              "Name": "devops-sandbox-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05257fce419460026"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "688948287774",
            "id": "sg-0bafb31bd10fa6ee6",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:688948287774:subnet/subnet-0c3ca3decb907a588",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3ca3decb907a588",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "688948287774",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "devops-sandbox-public-subnet"
            },
            "tags_all": {
              "Name": "devops-sandbox-public-subnet"
            },
            "vpc_id": "vpc-05257fce419460026"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "688948287774",
            "id": "subnet-0c3ca3decb907a588",
            "region": "ca-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:688948287774:vpc/vpc-05257fce419460026",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_route_table_id": "rtb-08b926a399af337fe",
            "default_security_group_id": "sg-03e8549a5a1575f0f",
            "dhcp_options_id": "dopt-045035a51c9a955a4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05257fce419460026",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b926a399af337fe",
            "owner_id": "688948287774",
            "region": "ca-central-1",
            "tags": {
              "Name": "devops-sandbox-vpc"
            },
            "tags_all": {
              "Name": "devops-sandbox-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "688948287774",
            "id": "vpc-05257fce419460026",
            "region": "ca-central-1"
          }
        }
      ]
    }
  ]
}